<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo5_copy"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/app_margin_default"
        android:layout_marginRight="@dimen/app_margin_default"
        android:layout_marginTop="-250dp"
        android:padding="@dimen/app_padding_card_login"
        android:visibility="visible"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="@dimen/app_card_elevation_default">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_background_style"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearlogologgin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="180dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@drawable/logoportadajoin" />

                <TextView
                    style="@style/Widget.TextView.Header.Main.Subtitle"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:text="@string/App_Name2"
                    android:textSize="21sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_username"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    app:startIconCheckable="true">

                    <EditText
                        android:id="@+id/etUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/prompt_email"
                        android:inputType="text"
                        android:singleLine="true"
                        android:drawableLeft="@drawable/baseline_perm_identity_white_24"
                        android:drawableStart="@drawable/baseline_perm_identity_white_24"
                        android:drawableTint="@color/darkest_gray"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_password"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="20dp"
                    app:endIconMode="password_toggle">

                    <EditText
                        android:id="@+id/etPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:drawableLeft="@drawable/baseline_lock_white_24"
                        android:drawableStart="@drawable/baseline_lock_white_24"
                        android:drawableTint="@color/darkest_gray"/>

                    <TextView
                        android:id="@+id/tvLoginError"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#fff30b0b"
                        android:visibility="gone" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <ProgressBar
        android:id="@+id/progressBar_login"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="140dp"
        android:indeterminateDrawable="@drawable/animationprogressbar"
        android:indeterminateDuration="@android:integer/config_longAnimTime"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="55dp"
        android:background="@drawable/btnripple"
        android:onClick="Login"
        android:text="@string/action_sign_in"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:gravity="center"
        android:text="@string/App_version"
        android:textStyle="bold" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>