<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="25px"
    android:minHeight="25px"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:id="@+id/numfrag"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/titlepurchase"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:paddingTop="4dp"
            android:text="@string/text_toolbar_numerofrag"
            android:textColor="#FFFFFF"

            android:textSize="27sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <ImageView
            android:id="@+id/btncnl_dialog_numerofrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/circlebtn"
            android:clickable="true"
            android:foregroundGravity="center_vertical|center_horizontal"
            app:srcCompat="@drawable/baseline_clear_white_24" />
    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tinumerocompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/numfrag"
        android:layout_marginTop="50dp"
        >


        <EditText
            android:id="@+id/etnofrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_people_white_24"
            android:drawableTint="@color/darkest_gray"
            android:drawableTintMode="src_in"
            android:hint="@string/numero_de_contribuyentes_fraccionar"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/llSearchcolaboradores"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_below="@+id/tinumerocompra"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btnripple">

        <TextView
            android:id="@+id/tv_buscarcolaboradores"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="2dp"
            android:paddingLeft="35dp"
            android:paddingRight="20dp"
            android:text="@string/buscarnumero"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:drawableLeft="@drawable/baseline_person_search_white_36"/>
    </LinearLayout>

</RelativeLayout>