<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fitsSystemWindows="true"
    tools:context=".moduleView.merchandiseReception.PurchaseOrdersActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbar_purchase"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:subtitleTextAppearance="@style/ToolbarSubtitleAppearance"
            app:titleTextAppearance="@style/ToolbarTitleAppearance" />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/tvnumerodecompra"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="50dp"
        android:text="@string/numero_de_compra"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_numerocompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="55dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintnumerodecompra"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimarytransparente"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvnumerodecompra" />

    <LinearLayout
        android:id="@+id/llSearch"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="-150dp"
        android:background="@color/colorAccent"
        >

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:tint="#FFFFFF"
            app:srcCompat="@android:drawable/ic_search_category_default"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buscarnumero"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>